--- a/learn-spring-security/src/main/resources/application.properties
+++ b/learn-spring-security/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=learn-spring-security
-spring.security.user.name=trong
-spring.security.user.password=123
+#spring.security.user.name=trong
+#spring.security.user.password=123
+spring.datasource.url=jdbc:h2:mem:testdb
